# spoolman2slicer

./: .bandit  .gitignore  API_USAGE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  PETG.json.template  PLA.json.template  README.md  REFACTORING_SUMMARY.md  RELEASING.md  REUSE.toml  create_template_files.py  docker-compose.yml  example_usage.py  install.sh  object_handler.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  spoolman2slicer.py  spoolman_core.py  template_core.py  update_version.sh
.github/workflows/: bandit.yml  build-container.yml  publish-pypi.yml  pylint.yml  tests.yml
spoolman2slicer/: create_template_files.py  spoolman2slicer.py
templates-crealityprint/: Hyper PLA.json.template  PETG.json.template  PLA.json.template  default.json.template  ePLA-Silk.json.template
templates-prusaslicer/: PLA.ini.template  default.ini.template
tests/: __init__.py  conftest.py  test_core_modules.py  test_create_template_files.py  test_spoolman2slicer.py  test_update_mode_and_caching.py
