# SPDX-FileCopyrightText: 2025 Sebastian Andersson <sebastian@bittr.nu>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spoolman2slicer"
dynamic = ["version"]
description = "Export active Spoolman spools' data to filament configuration files for 3D printer slicers"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = [
  "LICENSE",
  "LICENSES/*",
  "REUSE.toml",
]
authors = [
    {name = "Sebastian Andersson", email = "sebastian@bittr.nu"}
]
keywords = ["spoolman", "3d-printing", "slicer", "orcaslicer", "crealityprint", "prusaslicer", "superslicer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Printing",
]
dependencies = [
    "appdirs==1.4.4",
    "Jinja2==3.1.6",
    "requests==2.32.5",
    "websockets==12.0",
    "urllib3>=2.6.0",
]
[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "build>=1.4.0",
    "bumpver>=2025.1131",
    "mypy>=1.0.0",
    "pylint>=4.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "reuse>=5.0.0",
    "ruff>=0.1.0",
    "types-pyserial>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/bofh69/spoolman2slicer"
Repository = "https://github.com/bofh69/spoolman2slicer"
Issues = "https://github.com/bofh69/spoolman2slicer/issues"

[project.scripts]
spoolman2slicer = "spoolman2slicer:main"
create-template-files = "create_template_files:main"

[tool.setuptools]
packages = []
py-modules = ["spoolman2slicer", "create_template_files", "file_utils"]

[tool.setuptools.dynamic]
version = {attr = "spoolman2slicer.VERSION"}

[tool.setuptools.data-files]
"share/spoolman2slicer/templates-crealityprint" = ["templates-crealityprint/*"]
"share/spoolman2slicer/templates-orcaslicer" = ["templates-orcaslicer/*"]
"share/spoolman2slicer/templates-prusaslicer" = ["templates-prusaslicer/*"]
"share/spoolman2slicer/templates-slic3r" = ["templates-slic3r/*"]
"share/spoolman2slicer/templates-superslicer" = ["templates-superslicer/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.bumpver]
current_version = "0.1.1-rc1"
version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"create_template_files.py" = [
    '^VERSION = "{pep440_version}"',
]
"pyproject.toml" = [
    '^current_version = "{version}"',
]
"spoolman2slicer.py" = [
    '^VERSION = "{pep440_version}"',
]
